# sau

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker-image.yml  python-app.yml  python-publish.yml  release.yaml
configs/: config.yaml
docker/: Dockerfile  Taskfile.yaml  docker-compose.yaml
docker/grafana/dashboards/: sau.json
docker/prometheus/: prometheus.yml
docker/prometheus/rules/: rules.yml
src/sau/: __main__.py  info.py
tests/: Taskfile.yaml  test_sau.py
